Fixed bug where migrate buckets did not have local start/end times updated code constructs to java 17